Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-12358

A default constructed QFutureWatcher fails to correctly initialize its QFuture.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.6.0 RC
    • 4.6.2, 5.5.0
    • Core: Threads
    • None
    • MSVC 2008
    • b86efb1ab9daa76965cda5bdebb225c9e3762e8e

      In release mode with msvc 2008 the attached program gives the output:
      true true
      true false
      true true
      where it should be
      true true
      true true
      true true

      Regardless of the fact that it is rather counter-intuitive that a QFutureWatcher has the state "isStarted" before it has been started.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            Eddy Edward Welbourne
            bgp2000 Björn Piltz
            Votes:
            4 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes